# rust-final-cp

./: Cargo.toml  README.md
blood_types_s/src/: lib.rs  main.rs  solutionm.txt  template.txt  tests.rs
brackets_matching/: Cargo.toml
brackets_matching/src/: main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
car_rental/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
count_factorial_steps/src/: lib.rs  solution01edu.txt  solutionm.txt  tests.rs
counting_words/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
display_table/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
dress_code/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
filter_table/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
format_me/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
get_document_id/src/: lib.rs  template.txt  tests.rs
lucas_number/src/: lib.rs  main.rs  solutionm.txt  template.txt  tests.rs
lunch_queue/src/: lib.rs  main.rs  solutionm.txt  template.txt  tests.rs
matrix_determinant/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
matrix_display/: Cargo.toml
matrix_display/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
matrix_multiplication/src/: lib.rs  main.rs  solution.txt  template.txt  tests.rs
modify_letter/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
moving_targets/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
negative_spelling/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
office_worker/src/: lib.rs  main.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
partial_sums/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
previousprime/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
profanity_filter/src/: lib.rs  solutionm.txt  template.txt  tests.rs
reverse_it/src/: lib.rs  solution01edu.txt  solutionm.txt  template.txt  tests.rs
rot21/src/: lib.rs  solution01edu.txt  (+3 more)
(+5 files in other folders)
